# custom-linear-regression

./: LICENSE  README.md  linear_model.py  linear_regression.ipynb  main.py  manim_lr.py  pyproject.toml
