[tool.poetry]
name = "custom-linear-regression"
version = "0.1.0"
description = ""
authors = ["Aloïs BRENGARD <alois.brengard74@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.4"
scikit-learn = "^1.6.1"
jupyter = "^1.1.1"
matplotlib = "^3.10.1"
notebook = "^7.3.3"
manim = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

